# Project-4-BTH-Server

./: .gitignore  Cargo.toml  README.md
migrations/: 20250302114735_add_all_tables.sql  20250303045529_update_tables.sql  20250304071042_privacy.sql
src/: auth.rs  db.rs  main.rs
src/handlers/: match_algo.rs  mod.rs  password.rs  ws.rs
src/middleware/: auth_middleware.rs
src/models/: all_models.rs  mod.rs  models.rs
src/routes/: matching.rs  mod.rs  sponsor.rs  user_auth.rs  user_info.rs
